[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/DialogueBox.gd" type="Script" id=1]
[ext_resource path="res://Fonts/OS_Regular.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/DialogueText.gd" type="Script" id=3]
[ext_resource path="res://Scripts/DialoguePlayer.gd" type="Script" id=4]

[node name="DialogueBox" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 736.0
margin_bottom = 160.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Mouse", "Rect", "Size Flags", "Theme" ]

[node name="Panel" type="Panel" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 736.0
margin_bottom = 160.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Grow Direction", "Hint", "Mouse", "Rect", "Theme", "Visibility" ]

[node name="Text" type="RichTextLabel" parent="Panel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 32.0
margin_top = 32.0
margin_right = 640.0
margin_bottom = 128.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "Dialogue"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Dialogue"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
script = ExtResource( 3 )
_sections_unfolded = [ "BBCode", "Grow Direction", "Margin", "custom_fonts" ]

[node name="HBoxContainer" type="HBoxContainer" parent="Panel" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 608.0
margin_top = 96.0
margin_right = 716.0
margin_bottom = 138.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Focus", "Hint", "Mouse", "Rect", "Size Flags", "Theme", "custom_constants" ]

[node name="Next" type="Button" parent="Panel/HBoxContainer" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 108.0
margin_bottom = 42.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Next"
flat = false
align = 1
_sections_unfolded = [ "Rect", "Size Flags", "custom_fonts" ]

[node name="Done" type="Button" parent="Panel/HBoxContainer" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 54.0
margin_right = 108.0
margin_bottom = 42.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Done"
flat = false
align = 1
_sections_unfolded = [ "Material", "Mouse", "Size Flags", "Visibility", "custom_fonts" ]

[node name="DialoguePlayer" type="Node" parent="." index="1"]

script = ExtResource( 4 )

[node name="Timer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.05
one_shot = false
autostart = false

[connection signal="finish" from="Panel/Text" to="DialoguePlayer" method="_on_Text_finish"]

[connection signal="pressed" from="Panel/HBoxContainer/Next" to="." method="_on_Next_pressed"]

[connection signal="pressed" from="Panel/HBoxContainer/Done" to="." method="_on_Done_pressed"]

[connection signal="finish" from="DialoguePlayer" to="." method="_on_DialoguePlayer_finish"]

[connection signal="start" from="DialoguePlayer" to="." method="_on_DialoguePlayer_start"]

[connection signal="timeout" from="Timer" to="Panel/Text" method="_on_Timer_timeout"]


